src/objects/LMS_Config__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>New_Header__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Header</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_URL__c</fullName>
        <label>Service URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_One_URL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use One URL</label>
        <type>Checkbox</type>
    </fields>
    <label>LMS Config</label>
</CustomObject>